fix bug, navbar and horizontal scrollbar

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     background-color: #f7cfcf;
     font-family: "Nunito", sans-serif;
+    overflow-x: hidden;
 }
 
 .blurb h2 {
@@ -24,7 +25,6 @@ body {
 #MainNavbar {
     font-size: 1.5em;
     font-weight: 100;
-    margin-left: 13px;
 }
 
 #MainNavbar .nav-link {
